# workshop_estrutura

./: .gitignore  .python-version  404.html  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  test.xlsx.xlsx
.github/.workflows/: deploy.yml
.github/workflows/: deploy.yml
data/output/: consolidated_data.xlsx  test.xlsx
docs/: guia_do_desenvolvedor.md  index.md
guia_do_desenvolvedor/: index.html
search/: search_index.json
site/: 404.html  index.html  search.html  sitemap.xml
site/dev/dev1/: index.html
site/dev/dev2/: index.html
site/guia_do_desenvolvedor/: index.html
site/search/: search_index.json
src/: __init__.py  main.py
src/pipeline/: extract.py  load.py  pipeline.py  transform.py
tests/: __init__.py  test_integrations.py  test_load_df.py  test_pipeline.py
